--- a/web/templates/layouts/header.html
+++ b/web/templates/layouts/header.html
@@ -19,23 +19,13 @@
       </a>
     </li>
     <li class="layui-nav-item layui-hide-xs" lay-unselect>
-      <input
-        type="text"
-        placeholder="搜索..."
-        autocomplete="off"
-        class="layui-input layui-input-search"
-        layadmin-event="serach"
-        lay-action="template/search.html?keywords="
-      />
+      <input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search"
+        layadmin-event="serach" lay-action="template/search.html?keywords=" />
     </li>
   </ul>
   <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
     <li class="layui-nav-item" lay-unselect>
-      <a
-        lay-href="app/message/index.html"
-        layadmin-event="message"
-        lay-text="消息中心"
-      >
+      <a lay-href="app/message/index.html" layadmin-event="message" lay-text="消息中心">
         <i class="layui-icon layui-icon-notice"></i>
 
         <!-- 如果有新消息，则显示小圆点 -->
@@ -59,7 +49,7 @@
     </li>
     <li class="layui-nav-item" lay-unselect>
       <a href="javascript:;">
-        <cite>tester</cite>
+        <cite>{{ .user.Username}}</cite>
       </a>
       <dl class="layui-nav-child">
         <dd><a lay-href="set/user/info.html">基本资料</a></dd>
@@ -70,17 +60,10 @@
     </li>
 
     <li class="layui-nav-item layui-hide-xs" lay-unselect>
-      <a href="javascript:;" layadmin-event="about"
-        ><i class="layui-icon layui-icon-more-vertical"></i
-      ></a>
+      <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
     </li>
-    <li
-      class="layui-nav-item layui-show-xs-inline-block layui-hide-sm"
-      lay-unselect
-    >
-      <a href="javascript:;" layadmin-event="more"
-        ><i class="layui-icon layui-icon-more-vertical"></i
-      ></a>
+    <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect>
+      <a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
     </li>
   </ul>
 </div>
