--- a/web/templates/layouts/sidebar.html
+++ b/web/templates/layouts/sidebar.html
@@ -6,28 +6,20 @@
       <span>layuiAdmin</span>
     </div>
 
-    <ul
-      class="layui-nav layui-nav-tree"
-      lay-accordion=""
-      id="LAY-system-side-menu"
-      lay-filter="layadmin-system-side-menu"
-    >
+    <ul class="layui-nav layui-nav-tree" lay-accordion="" id="LAY-system-side-menu"
+      lay-filter="layadmin-system-side-menu">
       <li data-name="home" class="layui-nav-item">
         <a href="javascript:;" lay-tips="主页" lay-direction="2">
           <i class="layui-icon layui-icon-home"></i>
           <cite>主页</cite>
-          <i class="layui-icon layui-icon-down layui-nav-more"></i
-        ></a>
+          <i class="layui-icon layui-icon-down layui-nav-more"></i></a>
         <dl class="layui-nav-child">
           <dd data-name="console" class="">
             <a lay-href="home.html">控制台</a>
           </dd>
         </dl>
       </li>
-      <span
-        class="layui-nav-bar"
-        style="top: 230px; height: 0px; opacity: 0"
-      ></span>
+      <span class="layui-nav-bar" style="top: 230px; height: 0px; opacity: 0"></span>
     </ul>
   </div>
 </div>
