--- a/web/templates/layouts/tabs.html
+++ b/web/templates/layouts/tabs.html
@@ -1,19 +1,10 @@
 {{ define "layouts/tabs.html" }}
 <!-- 页面标签 -->
 <div class="layadmin-pagetabs" id="LAY_app_tabs">
-  <div
-    class="layui-icon layadmin-tabs-control layui-icon-prev"
-    layadmin-event="leftPage"
-  ></div>
-  <div
-    class="layui-icon layadmin-tabs-control layui-icon-next"
-    layadmin-event="rightPage"
-  ></div>
+  <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
+  <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
   <div class="layui-icon layadmin-tabs-control layui-icon-down">
-    <ul
-      class="layui-nav layadmin-tabs-select"
-      lay-filter="layadmin-pagetabs-nav"
-    >
+    <ul class="layui-nav layadmin-tabs-select" lay-filter="layadmin-pagetabs-nav">
       <li class="layui-nav-item" lay-unselect>
         <a href="javascript:;"></a>
         <dl class="layui-nav-child layui-anim-fadein">
@@ -33,12 +24,7 @@
       </li>
     </ul>
   </div>
-  <div
-    class="layui-tab"
-    lay-unauto
-    lay-allowClose="true"
-    lay-filter="layadmin-layout-tabs"
-  >
+  <div class="layui-tab" lay-unauto lay-allowClose="true" lay-filter="layadmin-layout-tabs">
     <ul class="layui-tab-title" id="LAY_app_tabsheader">
       <li lay-id="home.html" lay-attr="home.html" class="layui-this">
         <i class="layui-icon layui-icon-home"></i>
