--- a/web/templates/views/password.html
+++ b/web/templates/views/password.html
@@ -1,4 +1,4 @@
-{{ define "views/empty.html" }}
+{{ define "views/password.html" }}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-  <div class="layui-fluid">Empty</div>
+  <div class="layui-fluid">password</div>
 
   {{ template "layouts/script.html". }}
   <script>
-    layui.config({ base: "/static/modules/" }).use("empty");
+    layui.config({ base: "/static/modules/" }).use("password");
   </script>
 </body>
 
