--- a/web/templates/layouts/sidebar.html
+++ b/web/templates/layouts/sidebar.html
@@ -19,6 +19,20 @@
           </dd>
         </dl>
       </li>
+      <li data-name="settings" class="layui-nav-item">
+        <a href="javascript:;" lay-tips="设置" lay-direction="2">
+          <i class="layui-icon layui-icon-set"></i>
+          <cite>设置</cite>
+          <i class="layui-icon layui-icon-down layui-nav-more"></i></a>
+        <dl class="layui-nav-child">
+          <dd data-name="profile" class="">
+            <a lay-href="profile.html">基本资料</a>
+          </dd>
+          <dd data-name="password" class="">
+            <a lay-href="password.html">修改密码</a>
+          </dd>
+        </dl>
+      </li>
       <span class="layui-nav-bar" style="top: 230px; height: 0px; opacity: 0"></span>
     </ul>
   </div>
